contentgrid-junit-jupiter-k8s/src/main/resources/externalsecrets/networkpolicies.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets-to-apiserver
spec:
  description: "Allow external-secrets to access the api-server"
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: external-secrets
      # by installing the external secret operator through the xenit-infra helm it will also assign the instance=xenit-infra
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets-cert-controller-to-apiserver
spec:
  description: "Allow external-secrets to access the api-server"
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: external-secrets-cert-controller
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: kubeapi-to-external-secrets-webhook
spec:
  description: "Allow kubeapi to access the webhook"
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: external-secrets-webhook
  ingress:
    - fromEntities:
        - kube-apiserver
        - remote-node
      toPorts:
        - ports:
            - port: "10250"
              protocol: "TCP"
